// Copyright 2025 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// SessionRecordingEvent is an event that occurred during a session recording.

syntax = "proto3";

package teleport.recordingmetadata.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/recordingmetadata/v1;recordingmetadatav1";

// SessionRecordingEvent represents an event that occurred during a session recording.
message SessionRecordingEvent {
  // StartTime is the start time of the event, relative to the start of the session.
  int64 start_time = 1;
  // EndTime is the end time of the event, relative to the start of the session.
  int64 end_time = 2;

  oneof event {
    // InactivityEvent is an event that indicates inactivity during the session.
    SessionRecordingInactivityEvent inactivity = 3 [json_name = "inactivity"];
    // JoinEvent is an event that indicates a user joined the session.
    SessionRecordingJoinEvent join = 4 [json_name = "join"];
    // ResizeEvent is an event that indicates the terminal was resized.
    SessionRecordingResizeEvent resize = 5 [json_name = "resize"];
  }
}

// SessionRecordingInactivityEvent is an event that indicates inactivity during the session.
message SessionRecordingInactivityEvent {}

// SessionRecordingJoinEvent is an event that indicates a user joined the session.
message SessionRecordingJoinEvent {
  // User is the name of the user who joined the session.
  string user = 1;
}

// SessionRecordingResizeEvent is an event that indicates the terminal was resized.
message SessionRecordingResizeEvent {
  // Cols is the number of columns in the terminal.
  int32 cols = 1;
  // Rows is the number of rows in the terminal.
  int32 rows = 2;
}

// SessionRecordingMetadata contains details about a session recording.
message SessionRecordingMetadata {
  // Duration is the duration of the session in seconds.
  int64 duration = 1;
  // Thumbnails are the thumbnails of the session.
  repeated SessionRecordingThumbnail thumbnails = 2;
  // Events are the events of the session.
  repeated SessionRecordingEvent events = 3;
  // StartCols is the number of columns in the terminal at the start of the session.
  int32 start_cols = 4;
  // StartRows is the number of rows in the terminal at the start of the session.
  int32 start_rows = 5;
}

// SessionRecordingThumbnail is a thumbnail of a session recording.
message SessionRecordingThumbnail {
  // SVG is the SVG representation of the thumbnail.
  string svg = 1;
  // Cols is the number of columns in the terminal.
  int32 cols = 2;
  // Rows is the number of rows in the terminal.
  int32 rows = 3;
  // CursorX is the X coordinate of the cursor.
  int32 cursor_x = 4;
  // CursorY is the Y coordinate of the cursor.
  int32 cursor_y = 5;
  // StartTime is the start time of the thumbnail, relative to the start of the session.
  int64 start_time = 6;
  // EndTime is the end time of the thumbnail, relative to the start of the session.
  int64 end_time = 7;
}
